[workspace]
members = [
    "zomes/users/integrity",
    "zomes/users/coordinator",
    "zomes/sites/integrity",
    "zomes/sites/coordinator",
]
resolver = "2"

[workspace.dependencies]
# hdk 0.5.6 requires hdi 0.6.6!
hdi = "=0.6.6"  # Required by hdk 0.5.6
hdk = "=0.5.6"  # Exact match to conductor
serde = "1.0"
holochain_serialized_bytes = "*"  # Required for integrity zomes

