[package]
name = "agent_linking_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "agent_linking_coordinator"

[dependencies]
hdk.workspace = true
serde.workspace = true
holochain_serialized_bytes.workspace = true
agent_linking_integrity = { path = "../integrity" }
